# feedbax

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .worktree.yaml  CLAUDE.md  README.md  README_COMMIT.md  SPEC_EAGER_MODELS.md  __init__.py  _debug.py  _logging.py  colors.py  constants.py  database.py  feedbax_merge_spec.md  hyperparams.py  misc.py  mkdocs.yml  ops  plot.py  plot_utils.py  pyproject.toml  setup_utils.py  tree_utils.py  types.py
analyses/: aligned.py  analysis.py  execution.py
analysis/: _dependencies.py  activity.py  aligned.py  analysis.py  disturbance.py  effector.py  eig.py  execution.py  fp_finder.py  fps.py  fps_tmp2.py  func.py  grad.py  plot.py  profiles.py  regression.py  state_utils.py  violins.py
config/: __init__.py  batch.py  config.py  logging.yml  paths.yml  yaml.py
dashboard/backend/: presets.py
docs/: CLOUD_TRAINING_DISPATCH_SPEC.md  COLLIMATOR_COMPARISON.md  COMPONENTS_AND_WIRES_SPEC.md  DAE_BIOMECHANICS_SPEC.md  EAGER_MERGE_SPEC.md  LOSS_UI_SPEC.md  MOTORNET_COMPARISON.md  STATE_MERGE_SEMANTICS_SPEC.md  STATE_WIRE_TAPS_SPEC.md  WEB_UI_ISSUES.md  WEB_UI_ISSUES_v2.md  WEB_UI_ISSUES_v3.md  WEB_UI_ISSUES_v4.md  WEB_UI_RESPONSE_2026-01-27.md  WEB_UI_SPEC.md  index.md  learning_paradigms.md  nn_internal_representation_experiment.md  nn_internal_representation_sketch.md  ode_graph_ui_analysis.md  penzai_analysis.md  structure.md
docs/api/: intervene.md  iterate.md  model.md  staged.md  task.md
examples/: 5_model_stages.ipynb  biomechanics.ipynb
feedbax/: __init__.py  _graph.py  _io.py  _logging.py  _mapping.py  _model.py  _selectors.py  _staged.py  _tree.py  _treescope.py  bodies.py  channel.py  colors.py  components.py  context.py  database.py  dimred.py  dynamics.py  environment.py  eqx_components.py  filters.py  graph.py  hyperparams.py  intervene.py  intervene_old.py  io.py  iterate.py  loss.py  misc.py  model new.py  model.py  networks.py  nn.py  nn_cde.py  noise.py  penzai_component.py  perturbations.py  plot.py  plot_utils.py  plotly.py  (+15 more)
feedbax/_experiments/: __init__.py  _debug.py  _logging.py  colors.py  constants.py  database.py  hyperparams.py  misc.py  plot.py  (+5 more)
feedbax_experiments/: __init__.py
plugins/: __init__.py  discovery.py  registry.py
scratch/: loss.py
scripts/: build.sh  dev.sh  generate_eqx_components.py
tests/: __init__.py  test_2link_muscle_routing.py  test_acausal.py  test_acausal_graph.py  test_backend.py  test_batch_reshape_nan_bypass.py  test_batched_ppo.py  test_body.py  test_cde_controller.py  test_components.py  test_control_blocks.py  test_curriculum.py  test_dae.py  test_extended_ppo.py  test_graph.py  test_hill_muscles.py  test_lattice_noise.py  test_lazy_tasks.py  test_loss_composition.py  test_loss_service.py  test_mjx_plant.py  test_model_builder.py  test_muscle_templates.py  test_obs_norm.py  test_penzai_component.py  test_reach_only.py  test_rl_env.py  test_rl_ppo.py  test_rl_rewards.py  test_rl_tasks.py  test_selectors.py  test_skeletons.py  test_state_init.py  test_task_component.py  test_treescope.py
training/: __init__.py  loss.py  post_training.py  train.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
(+286 files in other folders)
